# pytest

./: .flake8  .gitignore  pyproject.toml
app/: main.py
app/bst/: avl.py  bst.py
app/utils/: std.py  utils.py
