[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "app"
version = "0.1"
requires-python = ">=3.13"

authors = [{ name = "dispronesson", email = "dispronesson@mail.ru" }]

dependencies = []

[project.optional-dependencies]
dev = ["black>=25.12", "flake8>=7.3"]

[tool.black]
line-length = 88
target-version = ["py313"]
